--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "http-server",
-    "run": "http-server"
+    "dashboard": "http-server" 
    },
   "author": "",
   "license": "ISC"
